--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="element sedan">
-                <img class="icon" src="./images/icon-sedans.svg" />
+                <img class="icon" src="./images/icon-sedans.svg" alt="Sedan icon" />
                 <h1 class="title">Sedans</h1>
                 <p class="info-text">
                     Choose a sedan for its affordability and excellent fuel economy. Ideal for
@@ -20,7 +20,7 @@
                 <button class="btn btn-sedan">Learn more</button>
             </div>
             <div class="element suv">
-                <img class="icon" src="./images/icon-suvs.svg" />
+                <img class="icon" src="./images/icon-suvs.svg" alt="SUV icon" />
                 <h1 class="title">SUVs</h1>
                 <p class="info-text">
                     Take an SUV for its spacious interior, power, and versatility. Perfect for your
@@ -29,7 +29,7 @@
                 <button class="btn btn-suv">Learn more</button>
             </div>
             <div class="element luxury">
-                <img class="icon" src="./images/icon-luxury.svg" />
+                <img class="icon" src="./images/icon-luxury.svg" alt="Luxury car icon" />
                 <h1 class="title">Luxury</h1>
                 <p class="info-text">
                     Cruise in the best car brands without the bloated prices. Enjoy the enhanced
