--- a/index.html
+++ b/index.html
@@ -9,40 +9,43 @@
         <title>Frontend Mentor | 3-column preview card component</title>
     </head>
     <body>
-        <div class="container">
-            <div class="element sedan">
-                <img class="icon" src="./images/icon-sedans.svg" alt="Sedan icon" />
-                <h1 class="title">Sedans</h1>
-                <p class="info-text">
-                    Choose a sedan for its affordability and excellent fuel economy. Ideal for
-                    cruising in the city or on your next road trip.
-                </p>
-                <button class="btn btn-sedan">Learn more</button>
+        <main>
+            <div class="container">
+                <div class="element sedan">
+                    <img class="icon" src="./images/icon-sedans.svg" alt="Sedan icon" />
+                    <h1 class="title">Sedans</h1>
+                    <p class="info-text">
+                        Choose a sedan for its affordability and excellent fuel economy. Ideal for
+                        cruising in the city or on your next road trip.
+                    </p>
+                    <button class="btn btn-sedan">Learn more</button>
+                </div>
+                <div class="element suv">
+                    <img class="icon" src="./images/icon-suvs.svg" alt="SUV icon" />
+                    <h1 class="title">SUVs</h1>
+                    <p class="info-text">
+                        Take an SUV for its spacious interior, power, and versatility. Perfect for
+                        your next family vacation and off-road adventures.
+                    </p>
+                    <button class="btn btn-suv">Learn more</button>
+                </div>
+                <div class="element luxury">
+                    <img class="icon" src="./images/icon-luxury.svg" alt="Luxury car icon" />
+                    <h1 class="title">Luxury</h1>
+                    <p class="info-text">
+                        Cruise in the best car brands without the bloated prices. Enjoy the enhanced
+                        comfort of a luxury rental and arrive in style.
+                    </p>
+                    <button class="btn btn-luxury">Learn more</button>
+                </div>
             </div>
-            <div class="element suv">
-                <img class="icon" src="./images/icon-suvs.svg" alt="SUV icon" />
-                <h1 class="title">SUVs</h1>
-                <p class="info-text">
-                    Take an SUV for its spacious interior, power, and versatility. Perfect for your
-                    next family vacation and off-road adventures.
-                </p>
-                <button class="btn btn-suv">Learn more</button>
-            </div>
-            <div class="element luxury">
-                <img class="icon" src="./images/icon-luxury.svg" alt="Luxury car icon" />
-                <h1 class="title">Luxury</h1>
-                <p class="info-text">
-                    Cruise in the best car brands without the bloated prices. Enjoy the enhanced
-                    comfort of a luxury rental and arrive in style.
-                </p>
-                <button class="btn btn-luxury">Learn more</button>
-            </div>
-        </div>
 
-        <div class="attribution">
-            Challenge by
-            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-            >. Coded by <a href="https://www.frontendmentor.io/profile/CharlieDW">CharlieDW</a>.
-        </div>
+            <div class="attribution">
+                Challenge by
+                <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by <a href="https://www.frontendmentor.io/profile/CharlieDW">CharlieDW</a>.
+            </div>
+        </main>
     </body>
 </html>
